Reorganize vector constants to work around gcc 4.1 bug:

http://gcc.gnu.org/bugzilla/show_bug.cgi?id=27006

This bug caused certain movies (444P or RGB/BGR-based) to become brighter
and more purple when played on a YV12 vo.

Originally committed as revision 18047 to svn://svn.mplayerhq.hu/mplayer/trunk/postproc